testsuite/tests/typecheck/should_fail/T15883.stderr

T15883.hs:9:1: error:
    • Newtype has non-* return kind ‘TYPE rep’
      Perhaps you intended to use UnliftedNewtypes
    • In the newtype declaration for ‘Foo’
